--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
             <version>7.2.5</version>
             <type>pom</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>7.2.5</version>
+        </dependency>
         
         <!-- Testing -->
         <dependency>
